[package]
name = "httpulse"
version = "0.1.0"
edition = "2024"
description = "Real-time HTTP latency and network quality monitoring with interactive TUI"
keywords = ["http", "latency", "monitoring", "tui", "network"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
curl = { version = "0.4", features = ["http2"] }
curl-sys = "0.4"
crossterm = "0.28"
hdrhistogram = "7"
libc = "0.2"
ratatui = "0.29"
url = "2"
uuid = { version = "1.18.1", features = ["v4"] }
